<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.registrar_visita">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="770dp">



        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="20dp"
            android:text="@string/nombre_ruta"
            android:textColor="@color/colorNegro"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/spDescRuta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:text="@string/select_cliente"
            android:textColor="@color/colorNegro"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.058"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spDescRuta" />

        <Spinner
            android:id="@+id/spSelectCliente"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <Button

            android:visibility="gone"
            android:id="@+id/btnFecha"
            android:layout_width="91dp"
            android:layout_height="43dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorCeleste"
            android:text="@string/select_fecha"
            android:textColor="@color/colorNegro"
            android:textSize="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spSelectCliente" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="56dp"
            android:text="@string/visita"
            android:textColor="@color/colorNegro"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnFecha" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="146dp"
            android:layout_height="65dp"
            android:layout_marginStart="89dp"
            android:layout_marginTop="36dp"
            app:layout_constraintStart_toEndOf="@+id/textView18"
            app:layout_constraintTop_toBottomOf="@+id/editFecha">

            <RadioButton
                android:id="@+id/rb_msi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/rb_si"
                android:theme="@style/RadioButtonStyle" />

            <RadioButton
                android:id="@+id/rb_mno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb_no"
                android:theme="@style/RadioButtonStyle" />
        </RadioGroup>

        <EditText
            android:visibility="gone"
            android:id="@+id/editFecha"
            android:layout_width="205dp"
            android:layout_height="51dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@+id/btnFecha"
            app:layout_constraintTop_toBottomOf="@+id/spSelectCliente" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="110dp"
            android:text="@string/text_motivo"
            android:textColor="@color/colorNegro"
            app:layout_constraintEnd_toStartOf="@+id/editMotivo"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editFecha" />


        <Spinner
            android:id="@+id/editMotivo"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/textView17"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
        <Button
            android:id="@+id/btnConfirmar"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="30dp"
            android:background="@color/colorCeleste"
            android:text="@string/btn_confirmarv"
            app:icon="@drawable/ic_check_circle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editMotivo" />

        <Button
            android:id="@+id/btnCancelarVisita"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/colorCancelar"
            android:text="@string/btn_cancelarv"
            app:icon="@drawable/ic_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnConfirmar" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</RelativeLayout>